Ticketing Dashboard weiter angepasst. Funktioniert. Minimal. Profil aufrufbar. wip an My Events

--- a/Frontend/src/app/theme/admin-layout/admin-layout.component.html
+++ b/Frontend/src/app/theme/admin-layout/admin-layout.component.html
@@ -11,6 +11,7 @@
                  (openedChange)="onSidenavOpenedChange($event)"
                  (closedStart)="onSidenavClosedStart()">
       <app-sidebar [showToggle]="!isOver"
+                   [showUser]="false"
                    (toggleCollapsed)="toggleCollapsed()"
                    [toggleChecked]="!!options.sidenavCollapsed">
       </app-sidebar>
